# tensorRT_Pro

./: .gitignore  AboutCode.zh-cn.md  CMakeLists.txt  Makefile  README.md  README.zh-cn.md  TensorRT.vcxproj  TensorRT.vcxproj.filters  YoloTRT_speed.xlsx  dll_export.def  ilogger.cpp
example-hard-decode-pybind/: Makefile  link-cuvid.sh  readme.md
example-hard-decode-pybind/cuvid-include/: nvEncodeAPI.h
example-hard-decode-pybind/ffmpeg/lib/: libavformat-4b79e479.so.58.45.100  libavutil-805734e8.so.56.51.100  libcrypto-018b8c17.so.1.1  libssl-6082116c.so.1.1  libswresample-83ce3247.so.3.7.100  libswscale-7e960168.so.5.7.100  libvpx-392cd848.so.6.4.0
example-hard-decode-pybind/src/: interface.cpp  pybind11.hpp
example-hard-decode-pybind/src/application/: app_demuxer.cpp  app_hard_decode.cpp
example-hard-decode-pybind/src/ffhdd/: color.cu  cuda_tools.cpp  cuda_tools.hpp  cuvid_decoder.cpp  cuvid_decoder.hpp  ffmpeg_demuxer.cpp  ffmpeg_demuxer.hpp  nalu.hpp  simple-logger.cpp  simple-logger.hpp
example-hard-decode-pybind/workspace/: test.py  test_hard_decode_yolov5.py
example-python/: copy_dll_to_trtpy.bat  setup.py  test_arcface.py  test_centernet.py  test_retinaface.py  test_scrfd.py  test_torch.py  test_yolov5.py  test_yolov7.py  test_yolox.py
example-python/pytrt/: __init__.py
example-restful_server/src/: main.cpp
example-restful_server/src/http/: binary_io.cpp  binary_io.hpp  ilogger.cpp  json.cpp
example-restful_server/src/infer/: simple_yolo.cu
example-restful_server/web/: index.html
example-restful_server/web/config/: index.js
example-simple_yolo/: Makefile  README.md  simple_yolo.sln  simple_yolo.vcxproj
example-simple_yolo/src/: import_lib.cpp  main.cpp  simple_yolo.cu  simple_yolo.hpp
example-simple_yolo/workspace/: fix_trt7.0_resize.py
lean/: README.md
onnx/: make_pb.sh  onnx-ml.proto  onnx-operators-ml.proto
onnx_parser/: change.log.md  readme.md  use_tensorrt_7.x.sh  use_tensorrt_8.x.sh
onnx_parser/onnx_parser_7.x/: ImporterContext.hpp  LoopHelpers.cpp  ModelImporter.cpp  ModelImporter.hpp  NvOnnxParser.cpp  NvOnnxParser.h  OnnxAttrs.cpp  OnnxAttrs.hpp  RNNHelpers.cpp  RNNHelpers.hpp  ShapeTensor.cpp  ShapeTensor.hpp  ShapedWeights.cpp  TensorOrWeights.hpp  builtin_op_importers.cpp  common.hpp  onnx2trt.hpp  onnx2trt_utils.cpp  onnx2trt_utils.hpp  onnx_utils.hpp  trt_utils.hpp
onnx_parser/onnx_parser_8.x/: ImporterContext.hpp  ModelImporter.cpp  ModelImporter.hpp  NvOnnxParser.cpp  NvOnnxParser.h  OnnxAttrs.cpp  ShapeTensor.cpp  ShapeTensor.hpp  TensorOrWeights.hpp  builtin_op_importers.cpp  onnx2trt_utils.hpp  onnx_utils.hpp  readme.md
python/: copy_dll_to_trtpy.bat  setup.py  test_arcface.py  test_centernet.py  test_retinaface.py  test_scrfd.py  test_torch.py  test_yolov5.py  test_yolox.py
python/trtpy/: __init__.py
resful_server/: LICENSE  Makefile  README.md  resful_server.sln  resful_server.vcxproj  resful_server.vcxproj.filters
resful_server/src/: import_lib.cpp  main.cpp
resful_server/src/http/: http_server.cpp  http_server.hpp  ilogger.cpp  mongoose.c  mongoose.h
resful_server/src/infer/: simple_yolo.cu
resful_server/web/: install.sh  package-lock.json  package.json  postcss.config.js  run_dev.sh
resful_server/web/src/: App.vue  main.js
resful_server/workspace/: base64-people.txt
restful_server/: .gitignore  CMakeLists.txt  Makefile
restful_server/src/: main.cpp
restful_server/src/http/: http_server.hpp  ilogger.hpp  json.hpp
restful_server/src/infer/: simple_yolo.cu
restful_server/web/: .gitignore  README.md
restful_server/workspace/web/: index.html
simple_yolo/: CMakeLists.txt  Makefile  README.md  simple_yolo.vcxproj  simple_yolo.vcxproj.filters
simple_yolo/lean/: README.md
simple_yolo/objs/: main.mk  simple_yolo.cumk
simple_yolo/src/: main.cpp  simple_yolo.cu  simple_yolo.hpp
simple_yolo/workspace/: fix_trt7.0_resize.py
src/: app_fall_recognize.cpp  auto_download.cpp  main.cpp  t.cpp
src/alphapose/: alpha_pose.cpp  alphapose_main.cpp
src/application/: app_alphapose.cpp  app_arcface.cpp  app_bert.cpp  app_centernet.cpp  app_dbface.cpp  app_fall_recognize.cpp  app_high_performance.cpp  app_lesson.cpp  app_objectbox.cpp  app_plugin.cpp  app_retinaface.cpp  app_scrfd.cpp  app_yolo.cpp  app_yolo_fast.cpp  app_yolo_gpuptr.cpp  objectbox.cpp  test_warpaffine.cpp  test_yolo_map.cpp
src/application/app_alphapose/: alpha_pose.cpp  alpha_pose.hpp  decode.cu
src/application/app_alphapose_old/: alpha_pose.cpp  alpha_pose_old.cpp  alpha_pose_old.hpp
src/application/app_arcface/: arcface.cpp  arcface.hpp
src/application/app_centernet/: centernet.cpp  centernet.hpp  centernet_decode.cu
src/application/app_dbface/: dbface.cpp  dbface.hpp  dbface_decode.cu
src/application/app_fall_gcn/: fall_gcn.cpp  fall_gcn.hpp
src/application/app_high_performance/: alpha_pose_high_perf.cpp  alpha_pose_high_perf.hpp  (+4 more)
src/core/: main.cpp
src/direct/: direct_classifier.cpp  direct_mae.cpp  direct_unet.cpp  direct_yolo.cpp
src/fall_gcn/: fall_gcn.cpp  fall_gcn.hpp
src/tensorRT/: import_lib.cpp
src/yolo/: yolo.cpp  yolo.hpp  yolo_decode.cu  yolo_main.cpp
src/yolov5/: yolov5.cpp  yolov5.hpp  yolov5_main.cpp
src/yolox/: yolox.cpp  yolox.hpp  yolox_main.cpp
tools/: pycuda_resize.py  show.py  test_dataloader_resize.py  test_resize.py
tutorial/: AboutCode.zh-cn.md  README.md  README.zh-cn.md  yolo.cpp
tutorial/1.0framework/: app_yolo.cpp  infer_controller.hpp  pipeline.goodnotes  yolo.cpp  yolo.hpp  yolo_decode.cu
tutorial/2.0CenterNet_from_torch_trt/: README.md  dcn_v2.py  demo.py  export2onnx.py  resnet_dcn.py
tutorial/2.0from_torch_to_trt/: README.md  README.zh-cn.md
unet/: app_u_net.cpp
unet/app_u_net/: u_net.cpp  u_net.hpp  u_net_cpu_postprocess.cpp  u_net_decode.cu
unet/app_unet/: unet.cpp  unet.hpp
windows/: README.md  TensorRT.sln  TensorRT.vcxproj.filters  dll_export.def
workspace/: cvt_dbface.py  formtest.ipynb  labels.imagenet.txt  lesson1.py  makesure_input.py  meta.json  plugin.onnx  python_test.ipynb  test_dcnv2.py  test_hswish.py  test_plugin.py
(+155 files in other folders)
